# yys-airtest

./: .env.example  .gitignore  .toml.example  README.md  app.py  main.py  pyproject.toml  settings.py
page/: __init__.py  activity.py  battle.py  main.py  material.py  rank.py  soul.py  spirit.py  ward.py
