[project]
name = ""
version = ""
description = ""
authors = [
    { name = "shaoyangzi", email = "shaoyangz1@163.com" },
]
dependencies = [
    "airtest>=1.3.2",
    "loguru>=0.7.2",
    "black>=23.12.1",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
]
requires-python = ">=3.9,<3.10"
license = { text = "MIT" }

[tool.pdm]
[tool.pdm.scripts]
yys = "python main.py"
