[project]
name = ""
version = ""
description = ""
authors = [
    { name = "shaoyangzi", email = "shaoyangz1@163.com" },
]
dependencies = [
    "airtest>=1.3.2",
    "loguru>=0.7.2",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "setuptools>=69.0.3",
    "black>=23.12.1",
    "isort>=5.13.2",
    "uvicorn>=0.25.0",
    "fastapi>=0.109.0",
]
requires-python = ">=3.11.0,<3.12.0"
license = { text = "MIT" }

[tool.pdm]
[tool.pdm.scripts]
yys = "python main.py"
