[project]
name = ""
version = ""
description = ""
authors = [
    { name = "shaoyangzi", email = "shaoyangz1@163.com" },
]
dependencies = [
    "airtest>=1.3.4",
    "loguru>=0.7.2",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "setuptools>=74.0.0",
    "black>=24.8.0",
    "isort>=5.13.2",
    "uvicorn>=0.30.6",
    "fastapi>=0.112.2",
    "numpy<=1.26.4",
]
requires-python = ">=3.11.0,<3.12.0"
license = { text = "MIT" }

[tool.pdm]
[tool.pdm.scripts]
yys = "python main.py"
